# dsci-310-group-17-pkg

./: .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTIONS.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
doc/: conf.py  index.rst  requirements.txt  usage.ipynb
src/group17pkg/: __init__.py  analysis_visualizations.py  clean_data.py  clean_data_script.py  download_data.py  eda.py  eda_script.py  merge_csv.py  remove_files.py
tests/: test_analysis_visualizations.py  test_clean_data.py  test_eda.py
